--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,27 +1,9 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Posts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Post', new_post_path %>
+        <!-- START ARTICLE FEED -->
+        <p id="notice"><%= notice %></p>
+        <section class="articles">
+            <div class="column is-8 is-offset-2">
+                <%= render partial: 'posts/post', collection: @posts.sort_by(&:created_at).reverse%>
+            </div>
+            <%= link_to 'Nowe ogłoszenie', new_post_path if session[:admin] %>
+        </section>
+        <!-- END ARTICLE FEED -->
