--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,9 @@
+
 <p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<section class="articles">
+    <div class="column is-8 is-offset-2">
+        <%= render partial: 'posts/post', locals: {post: @post}%>
+    </div>
+    <%= link_to 'Dodaj ogłoszenie', new_post_path if session[:admin] %>
+</section>
+<%= link_to 'Powrót', root_path %>
