--- a/app/assets/stylesheets/blog.scss
+++ b/app/assets/stylesheets/blog.scss
@@ -11,11 +11,13 @@ html,body {
     font-weight: bold;
   }
   .hero-body
-  {background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/f/f6/Plum_trees_Kitano_Tenmangu.jpg/1200px-Plum_trees_Kitano_Tenmangu.jpg);
+  {
+    background: url(/assets/header.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   height: 500px;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   }
   .articles {
     margin: 5rem 0;
